--- a/src/html/index.html
+++ b/src/html/index.html
@@ -36,7 +36,7 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="tel:+7 (915) 169 38-38" style="color: #72AB46;">
+                        <a style="color: #696969;"  style="color: #72AB46;">
                           чек лист привычек
                         </a>
                     </li>
