--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Эко сознание</title>
-    <link rel="stylesheet" href="../css/style.css ">
+    <link rel="stylesheet" href="./css/style.css ">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <script src="../js/nav.js" defer></script>
-    <script src="../js/slider.js" defer></script>
+    <script src="./js/nav.js" defer></script>
+    <script src="./js/slider.js" defer></script>
     <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="../icon/logo.png">
+    <link rel="icon" href="./icon/logo.png">
 </head>
 <body>
     <div class="container">
