--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="primary-header flex">
-            <div class="logoImg-container"><img src="../icon/logo.png" alt="logoImg" class="logoImg">
+            <div class="logoImg-container"><img src="./icon/logo.png" alt="logoImg" class="logoImg">
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
         
@@ -53,8 +53,8 @@
                             </p>
                         </span>
                     </h1>
-                    <img class="logo-red" loading="lazy" src="../icon/logo-red.png">
-                    <img loading="lazy" src="../img/image 50.png" alt="ambulance">
+                    <img class="logo-red" loading="lazy" src="./icon/logo-red.png">
+                    <img loading="lazy" src="./img/image 50.png" alt="ambulance">
                 </div>
                 <div id="main" class="service__text-container">
                     <h2> Я в моменте - ты в потоке</h1>
