--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,8 @@
 <body>
     <div class="container">
         <header class="primary-header flex">
-            <div class="logoImg-container"><img src="../icon/logo.png" alt="logoImg" class="logoImg">
+            <div class="logoImg-container">
+                <img src="../icon/logo.png"  loading="lazy" alt="logoImg" class="logoImg">
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
         
