--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
 <body>
     <div class="container">
         <header class="primary-header flex">
-            <div class="logoImg-container"><img src="../icon/logo.png" alt="logoImg" class="logoImg">
+            <div class="logoImg-container"><img  loading="lazy" src="../icon/logo.png" alt="logoImg" class="logoImg">
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
         
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="#license">
+                        <a style="color: #696969;" href="./resources.html">
                           ресуры
                         </a>
                     </li>
