--- a/src/html/factors.html
+++ b/src/html/factors.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Эко сознание</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="../../css/style.css ">
+    <link rel="stylesheet" href="../css/factors.css">
+    <link rel="stylesheet" href="../css/style.css ">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <script src="../../js/nav.js" defer></script>
     <script src="../../js/slider.js" defer></script>
@@ -21,7 +21,7 @@
     <header class="primary-header flex">
         <div class="logoImg-container">
             <a href="#" class="logo-link">
-                <img src="../../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                <img src="../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
             </a>
         </div>
         <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span
@@ -301,6 +301,6 @@
         </main>
     </div>
 </body>
-<script src="js/index.js"></script>
+<script src="../js/factors.js"></script>
 
 </html>
