--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="#license">
-                          ресуры
+                        <a style="color: #696969;" href="./resources.html">
+                            ресуры
                         </a>
                     </li>
                     <li class="navigation__list-item">
