--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
             <nav class="navigation">
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li class="navigation__list-item active">
-                        <a style="color: #696969;" href="#main">
-                          здоровье
+                        <a style="color: #696969;" href="./index.html">
+                            осознанность
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="#cure">
-                          тесты
+                        <a style="color: #696969;" href="./factors.html">
+                          факторы
                         </a>
                     </li>
                     <li class="navigation__list-item">
