--- a/src/html/resources.html
+++ b/src/html/resources.html
@@ -4,39 +4,53 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/recources.css">
-    <link rel="stylesheet" href="../css/style.css">
-    <script src="./js/nav.js" defer></script>
-    <script src="./js/mobile.js" ></script>
-    <title>Document</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon/logo.png">
+    <title>ЭкоСознание</title>
+
+    <link rel="stylesheet" href="/css/recources.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/nav.js" defer></script>
+    <script src="/js/mobile.js" ></script>
 </head>
 <body>
     <div class="container">
         <header class="primary-header flex">
-            <div class="logoImg-container"><img src="../icon/logo.png" alt="logoImg" class="logoImg">
+            <div class="logoImg-container">
+                <div>
+                    <img src="/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                </div>
+                <div class="title">
+                    <a style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО</a>
+                    <a style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</a>
+                </div>
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
         
             <nav class="navigation">
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li class="navigation__list-item active">
-                        <a style="color: #696969;" href="#main">
-                          здоровье
+                        <a  href="./index.html">
+                            осознанность
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="#cure">
+                        <a  href="./factors.html">
                           тесты
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="./resources.html">
+                        <a  href="./resources.html">
                             ресуры
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;"  style="color: #72AB46;">
+                        <a>
                           чек лист привычек
+                        </a>
+                    </li>
+                    <li class="navigation__list-item">
+                        <a  href="./factors.html">
+                          факторы
                         </a>
                     </li>
                 </ul>
@@ -51,7 +65,7 @@
                         </p>
                     </span>
                 </h1>
-                <img class="logo-red logo-red--blured" loading="lazy" src="../icon/logo-red.png">
+                <img class="logo-red logo-red--blured" loading="lazy" src="/icon/logo-red.png">
             </div>
             <div class="resources-wrapper wrapper">
                 <button class="sort-button">фильтры</button>
@@ -62,43 +76,43 @@
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Брось курить</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number"></p></h1><!--f-->
                             <div class="item__bottom">
                                 <p class="item__name">Welltory</p><!--f-->
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Шагомер++</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Женский календарь месячных Flo</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Трекер воды</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                     </div>
                 </div>
@@ -109,43 +123,43 @@
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">WebMD</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number"></p></h1><!--f-->
                             <div class="item__bottom">
                                 <p class="item__name">FitBit</p><!--f-->
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">MyFitnessPal</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Орнамент</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Гемотест</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                     </div>
                 </div>
@@ -156,49 +170,49 @@
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Активное долголетие</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number"></p></h1><!--f-->
                             <div class="item__bottom">
                                 <p class="item__name">Медитация к силе познания</p><!--f-->
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
 
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Зачем мы спим. Новая наука о сне и сновидениях</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Еда, меняющая жизнь</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                         <div class="list__item item">
                             <h1 class="item__id highlight"><p class="item__id-number">01</p></h1>
                             <div class="item__bottom">
                                 <p class="item__name">Твое тело говорит: люби себя</p>
-                                <img src="../img/plus-img.svg" alt="">
+                                <img src="/img/plus-img.svg" alt="">
                             </div>
-                            <img class="item__logo" loading="lazy" src="../icon/logo-red.png">
+                            <img class="item__logo" loading="lazy" src="/icon/logo-red.png">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
     </div>
-    <script src="./js/resources.js"></script>
+    <script src="/js/resources.js"></script>
 </body>
 </html>
