--- a/src/html/index.html
+++ b/src/html/index.html
@@ -3,45 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Эко сознание</title>
-    <link rel="stylesheet" href="../css/style.css ">
+    <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <script src="../js/nav.js" defer></script>
-    <script src="../js/slider.js" defer></script>
+    <script src="/js/nav.js" defer></script>
     <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="../icon/logo.png">
-</head>
+    <link rel="icon" type="image/png" sizes="16x16" href="/icon/logo.png">
+    <title>ЭкоСознание</title></head>
 <body>
     <div class="container">
         <header class="primary-header flex">
-            <div class="logoImg-container"><img  loading="lazy" src="../icon/logo.png" alt="logoImg" class="logoImg">
+            <div class="logoImg-container">
+                <div>
+                    <img src="/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                </div>
+                <div class="title">
+                    <a style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО</a>
+                    <a style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</a>
+                </div>
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
         
             <nav class="navigation">
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li class="navigation__list-item active">
-                        <a style="color: #696969;" href="#main">
-                          здоровье
+                        <a href="/src/html/index.html">
+                            осознанность
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="#cure">
+                        <a  href="./factors.html">
                           тесты
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;" href="./resources.html">
-                          ресуры
+                        <a  href="./resources.html">
+                            ресуры
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;"  style="color: #72AB46;">
+                        <a >
                           чек лист привычек
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a style="color: #696969;"  style="color: #72AB46;">
+                        <a  href="./factors.html">
                           факторы
                         </a>
                     </li>
@@ -58,8 +63,8 @@
                             </p>
                         </span>
                     </h1>
-                    <img class="logo-red" loading="lazy" src="../icon/logo-red.png">
-                    <img loading="lazy" src="../img/image 50.png" alt="ambulance">
+                    <img class="logo-red" loading="lazy" src="/icon/logo-red.png">
+                    <img loading="lazy" src="/img/image 50.png" alt="ambulance">
                 </div>
                 <div id="main" class="service__text-container">
                     <h2> Я в моменте - ты в потоке</h1>
@@ -71,18 +76,7 @@
                         Растущую популярность осознанности ученые называют мощным социальным явлением. Они призывают к осторожности всех, кто решил не отставать от модных веяний, потому что терапевтический эффект осознанности все еще под большим вопросом.
                     </p>
                 </div>
-                <div class="call-button" style="border: 1px solid #EDCFC5;
-                background: #EDCFC5;
-                padding: 10px;
-                border-radius: 6px;
-                transition: background 1s;
-                width: calc(100%/2);
-                text-align: center;
-                float: right;
-                margin-right: 2em;
-                margin-bottom: 1em;
-                
-                ">
+                <div  class="btn-intersting">
                     <a style="color: #fff;
                     font-size: 20px;">интересно</a>
                 </div>
