--- a/src/html/main.html
+++ b/src/html/main.html
@@ -31,7 +31,7 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a  href="./factors.html">
+                        <a  href="../../React/test/index.html">
                           тесты
                         </a>
                     </li>
