--- a/src/html/main.html
+++ b/src/html/main.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
     <link rel="stylesheet" href="/css/main.css">
     <script src="/js/nav.js" defer></script>
+    <script async type="text/javascript" src="https://cdn.jsdelivr.net/npm/@testometrika/widget@1/index.min.js"></script>
     <script src="https://kit.fontawesome.com/c4254e24a8.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/png" sizes="16x16" href="/icon/logo.png">
     <title>ЭкоСознание</title></head>
@@ -15,7 +16,7 @@
         <header class="primary-header flex">
             <div class="logoImg-container">
                 <div>
-                    <img src="/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                    <img src="../../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
                 </div>
                 <div class="title">
                     <a style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО<strong style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</strong></a>
@@ -109,11 +110,18 @@
                 </div>
             </div>
         </div>
+        <div class="div-service">
+            <h1 class="service">Тесты</h1>
+            <div class="card-articles">
+               
+            </div>
+        </div>
         <div class="div-eco">
             <h1 class="eco">о проекте</h1>
             <div class="card-eco">
                 <img style="width: 32em; height: 32em;" src="/img/mainImg/top-view-of-plate-with-keto-diet-food-and-nuts 1 (1).png">
-               
+                <div class="testometrika_widget" id="vjurgjoa"></div>
+
                 <a class="text-eco">
                     Один из важнейших факторов благосостояния жизни – здоровое население. Изучение влияния внешних факторов и формирования здорового образа жизни – главная цель экологии человека. Для этого необходимо обеспечить студентов Московского Политеха соответствующей информацией, способствующей оптимизации жизненной среды студента и процессов, протекающих в самом человеке как биологическом и одновременно социальном существе, человеческом обществе и среде обитания студента. Реализация проекта позволит обеспечить более полной информацией по соблюдению качественности жизни людей, сформировать важные привычки, в том числе экологической направленности. Платформа "ЭкоСознание" представляет собой ценный ресурс для тех, кто стремится к гармонии своего физического и ментального здоровья. Мы посвящены пропаганде здорового образа жизни, обучению экологичным и устойчивым практикам, а также психологическому благополучию. На нашем сайте вы найдете разнообразные статьи, советы и ресурсы, направленные на поддержание физического здоровья: правильное питание, упражнения, методы улучшения общего состояния организма и профилактики заболеваний. Мы также обращаем внимание на ментальное здоровье, предлагая информацию о медитации, практиках для снятия стресса, и методах улучшения психологического благополучия. "ЭкоСознание" поддерживает здоровый образ жизни, основанный на уважении к себе и окружающей среде.                </a>
             </div>
