--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,11 +14,10 @@
         <header class="primary-header flex">
             <div class="logoImg-container">
                 <div>
-                    <img src="/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                    <img src="../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
                 </div>
                 <div class="title">
-                    <a style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО</a>
-                    <a style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</a>
+                    <a href="./main.html" style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО<strong style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</strong></a>
                 </div>
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
