--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
         <header class="primary-header flex">
             <div class="logoImg-container">
                 <div>
-                    <img src="../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                    <img src="/src/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
                 </div>
                 <div class="title">
-                    <a href="./main.html" style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО<strong style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</strong></a>
+                    <a href="/src/html/main.html" style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО<strong style="color: #B4D21C; font-size: 26px; font-family: Cygre-Black;">СОЗНАНИЕ</strong></a>
                 </div>
             </div>
             <button class="mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false"><span class="sr-only"></span></button>
@@ -28,7 +28,7 @@
             <nav class="navigation">
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li class="navigation__list-item active">
-                        <a href="/src/html/index.html">
+                        <a href="./index.html">
                             осознанность
                         </a>
                     </li>
@@ -38,7 +38,7 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a  href="./resources.html">
+                        <a  href="/src/html/resources.html">
                             ресуры
                         </a>
                     </li>
