--- a/src/html/factors.html
+++ b/src/html/factors.html
@@ -34,7 +34,7 @@
         <nav class="navigation">
             <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                 <li class="navigation__list-item active">
-                    <a  href="./index.html">
+                    <a  href="/index.html">
                         осознанность
                     </a>
                 </li>
