--- a/src/html/resources.html
+++ b/src/html/resources.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="16x16" href="/icon/logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../icon/logo.png">
     <title>ЭкоСознание</title>
 
-    <link rel="stylesheet" href="/css/recources.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="../css/recources.css">
+    <link rel="stylesheet" href="../css/style.css">
     <script src="/js/nav.js" defer></script>
     <script src="/js/mobile.js" ></script>
 </head>
@@ -17,7 +17,7 @@
         <header class="primary-header flex">
             <div class="logoImg-container">
                 <div>
-                    <img src="/icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
+                    <img src="../icon/logo.png" loading="lazy" alt="logoImg" class="logoImg">
                 </div>
                 <div class="title">
                     <a style="color: #4A860B; font-size: 26px; font-family: Gilroy-Medium;">ЭКО</a>
@@ -29,12 +29,12 @@
             <nav class="navigation">
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li class="navigation__list-item active">
-                        <a  href="./index.html">
+                        <a  href="/index.html">
                             осознанность
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a  href="./factors.html">
+                        <a  href="/React/test/index.html">
                           тесты
                         </a>
                     </li>
@@ -44,7 +44,7 @@
                         </a>
                     </li>
                     <li class="navigation__list-item">
-                        <a>
+                        <a href="/React/Score/index.html">
                           чек лист привычек
                         </a>
                     </li>
