--- a/src/food/index.html
+++ b/src/food/index.html
@@ -98,7 +98,7 @@
             <div class="container3">
                 <h2 class="title3">Как перейти на правильное питание:
                 </h2>
-                <p class="text3">1.<span class="color-title"> Постепенное снижение: </span>
+                <p class="text3">1.<span class="color-title"> Постепенное снижение: </span><br>
                     Начните постепенно уменьшать потребление продуктов
                     с высоким содержанием сахара, жира и процессированных ингредиентов
                     <br>2.<span class="color-title">Найдите здоровые альтернативы: </span><br>
